Tue Jun 12 14:13:00 CEST 2007 Ahmed Bennani <ahmed_b@users.sourceforge.net>

	* src/org/jcae/mesh/mesher/ds/MNode1D.java
	  src/org/jcae/mesh/mesher/ds/MMesh0D.java
	  src/org/jcae/mesh/mesher/ds/MMesh1D.java
	  src/org/jcae/mesh/mesher/ds/SubMesh1D.java
	Creation of a MMesh0D and a MMesh1D using the discretizations' 
	definition found in a model

Thu Jun  7 15:24:38 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshWriter.java (writeObject3D): Drop
	last argument, it is unused.

Wed Jun  6 15:13:33 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java: When OTriangle
	had been renamed into VirtualHalfEdge, latest fixes in OTriangle had
	been erroneously dropped due to merge conflicts.  Fix hasAttributes()
	nextOTriOriginLoop(), nextApexLoop() and canCollapse().

Fri Jun  1 11:39:21 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/oemm/OEMMNode.java
	  src/org/jcae/mesh/oemm/OEMM.java: Make OEMMNode an inner class
	of OEMM, renamed into OEMM.Node.

Wed May 30 14:06:49 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/MeshOEMMIndex.java: Modify main arguments, to be
	consistent with Mesher arguments.

Wed May 23 12:01:48 CEST 2007 Ahmed Bennani <ahmed_b@users.sourceforge.net>

	* src/org/jcae/mesh/bora/ds/BDiscretization.java: New class.
	Most bora data structures are modified to fix previous bugs.

Mon May  7 10:49:16 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/OTriangle.java
	  src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java: Rename OTriangle
	into VirtualHalfEdge.
	* src/org/jcae/mesh/amibe/traits/*.java
	  src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java
	  src/org/jcae/mesh/amibe/ds/AbstractMesh.java
	  src/org/jcae/mesh/amibe/ds/AbstractTriangle.java
	  src/org/jcae/mesh/amibe/ds/AbstractVertex.java: A new concept of